Events some search parameters added
