# events-endpoint-api/src/routes/index.js
@@ -1,9 +1,20 @@
 import events from "./events.js";
+import geofence from "./geofences.js";
+import tags from "./tags.js";
+
 
 const Routes = [
     {
         path: "/events",
         route: events
+    },
+    {
+        path: "/geofence",
+        route: geofence
+    },
+    {
+        path: "/event-tags",
+        route: tags
     }
 ];
 
